logs/dag_id=get_team_standings/run_id=scheduled__2024-03-21T13:00:00+00:00/task_id=create_postgres_table/attempt=5.log
[2024-03-23T01:22:15.943+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_team_standings.create_postgres_table scheduled__2024-03-21T13:00:00+00:00 [queued]>
[2024-03-23T01:22:15.948+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_team_standings.create_postgres_table scheduled__2024-03-21T13:00:00+00:00 [queued]>
[2024-03-23T01:22:15.948+0000] {taskinstance.py:2193} INFO - Starting attempt 5 of 6
[2024-03-23T01:22:15.954+0000] {taskinstance.py:2214} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2024-03-21 13:00:00+00:00
[2024-03-23T01:22:15.959+0000] {standard_task_runner.py:60} INFO - Started process 495 to run task
[2024-03-23T01:22:15.962+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'get_team_standings', 'create_postgres_table', 'scheduled__2024-03-21T13:00:00+00:00', '--job-id', '14', '--raw', '--subdir', 'DAGS_FOLDER/team_stats.py', '--cfg-path', '/tmp/tmpt6o1ukya']
[2024-03-23T01:22:15.964+0000] {standard_task_runner.py:88} INFO - Job 14: Subtask create_postgres_table
[2024-03-23T01:22:16.003+0000] {task_command.py:423} INFO - Running <TaskInstance: get_team_standings.create_postgres_table scheduled__2024-03-21T13:00:00+00:00 [running]> on host e4a45e6f747a
[2024-03-23T01:22:16.056+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='jmc' AIRFLOW_CTX_DAG_ID='get_team_standings' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2024-03-21T13:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-03-21T13:00:00+00:00'
[2024-03-23T01:22:16.057+0000] {sql.py:276} INFO - Executing: 
            CREATE TABLE IF NOT EXISTS team_standings (
                teamid TEXT
                teamname TEXT, 
                conference TEXT, 
                record TEXT, 
                wins INTEGER,
                losses INTEGER, 
                division TEXT, 
                divisionrecord TEXT,
                divisionrank INTEGER, 
                winpct FLOAT, 
                l10 TEXT, 
                ot TEXT,
                currentstreak INTEGER, 
                pointspg FLOAT, 
                opppointspg FLOAT,
                diffpointspg FLOAT,
                primary key (teamid)
            );
        
[2024-03-23T01:22:16.064+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-23T01:22:16.072+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-03-23T01:22:16.089+0000] {sql.py:457} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS team_standings (
                teamid TEXT
                teamname TEXT, 
                conference TEXT, 
                record TEXT, 
                wins INTEGER,
                losses INTEGER, 
                division TEXT, 
                divisionrecord TEXT,
                divisionrank INTEGER, 
                winpct FLOAT, 
                l10 TEXT, 
                ot TEXT,
                currentstreak INTEGER, 
                pointspg FLOAT, 
                opppointspg FLOAT,
                diffpointspg FLOAT,
                primary key (teamid)
            );
        , parameters: None
[2024-03-23T01:22:16.092+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 404, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 462, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "teamname"
LINE 4:                 teamname TEXT, 
                        ^

[2024-03-23T01:22:16.122+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=get_team_standings, task_id=create_postgres_table, execution_date=20240321T130000, start_date=20240323T012215, end_date=20240323T012216
[2024-03-23T01:22:16.135+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 14 for task create_postgres_table (syntax error at or near "teamname"
LINE 4:                 teamname TEXT, 
                        ^
; 495)
[2024-03-23T01:22:16.174+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-03-23T01:22:16.189+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.8/site-packages/***/models/baseoperator.py:1201 AirflowProviderDeprecationWarning: Call to deprecated class PostgresOperator. (Please use `***.providers.common.sql.operators.sql.SQLExecuteQueryOperator`.Also, you can provide `hook_params={'schema': <database>}`.)
[2024-03-23T01:22:16.201+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
